[package]
name = "ndn-trust-envelope"
version = "0.1.0"
edition = "2024"
description = "Shared `ndn-trust://` onboarding/pairing envelope codec (issuer + mobile)."

[dependencies]
ndn-tlv   = { workspace = true, default-features = false }
bytes     = { workspace = true, features = ["std"] }
base64    = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# only for the `emit` helper's `qr` mode (renders a payload SVG for testing)
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

[package.metadata.scope]
classification = "extension"
